-
Bug
-
Resolution: Fixed
-
P0: Blocker
-
6.9.0 Beta3
-
None
-
048ffff02 (dev), 83615244a (6.8)
-
DaVinci 114
468: /home/qt/work/qt/qt3d/src/render/lights/qspotlight.cpp:135: (qdoc) warning: Invalid QML property type: float /home/qt/work/qt/qt3d/src/render/lights/qspotlight.cpp:165: (qdoc) warning: Invalid QML property type: float /home/qt/work/qt/qt3d/src/render/lights/qspotlight.cpp:105: (qdoc) warning: Invalid QML property type: float /home/qt/work/qt/qt3d/src/render/lights/qspotlight.cpp:216: (qdoc) warning: Invalid QML property type: float /home/qt/work/qt/qt3d/src/render/lights/qspotlight.cpp:135: (qdoc) warning: Invalid QML property type: float /home/qt/work/qt/qt3d/src/render/lights/qspotlight.cpp:165: (qdoc) warning: Invalid QML property type: float /home/qt/work/qt/qt3d/src/render/lights/qspotlight.cpp:105: (qdoc) warning: Invalid QML property type: float /home/qt/work/qt/qt3d/src/render/lights/qspotlight.cpp:216: (qdoc) warning: Invalid QML property type: float /home/qt/work/qt/qt3d/src/render/lights/qspotlight.cpp:135: (qdoc) warning: Invalid QML property type: float /home/qt/work/qt/qt3d/src/render/lights/qspotlight.cpp:165: (qdoc) warning: Invalid QML property type: float QDoc: error: Documentation warnings (48) exceeded the limit (0) for 'Qt3D'.
Details: https://testresults.qt.io/coin/integration/qt/qt3d/tasks/1740019422
Tested changes (refs/builds/qtci/6.9/1740019421):
https://codereview.qt-project.org/c/qt/qt3d/+/625933/2 Update dependencies on '6.9' in qt/qt3d
For Gerrit Dashboard: QTBUG-133931 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
623063,4 | Doc: Fix incorrect QML property types | dev | qt/qt3d | Status: MERGED | +2 | 0 |
626068,1 | Doc: Fix invalid QML property QDoc warnings | 6.9 | qt/qt3d | Status: ABANDONED | +1 | 0 |
626621,2 | Doc: Fix incorrect QML property types | 6.8 | qt/qt3d | Status: MERGED | +2 | 0 |