Doc: Fix incorrect QML property types

QDoc now warns about C++ types in QML property documentation.
This change fixes existing documentation to prevent warnings.

Pick-to: 6.8
Fixes: QTBUG-133931
Change-Id: Ia765b96ee7a08e95ee6b7f01e04fea1b49c14fc2
Reviewed-by: Paul Wicking <paul.wicking@qt.io>